--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </g>
         </symbol>
     </svg>
-    
+
     <div class="template-slider__container">
     <div class="template-slider swiper">
         <div class='right-overlay'></div>
@@ -315,7 +315,7 @@
     <!-- navigation buttons -->
     <div class="template-slider--prev template-slide__arrow">
         <svg class="icon">
-            <use xlink:href="#bin-icon"></use>
+            <use xlink:href="#arrow-icon"></use>
         </svg>
     </div>
     <div class="template-slider--next template-slide__arrow">
