--- a/index.html
+++ b/index.html
@@ -328,8 +328,7 @@
                     </div>
                 </div>
             
-            </div>
-            
+            </div>       
         </div>
         <!-- pagination -->
         <div class="swiper-pagination"></div>
@@ -345,6 +344,31 @@
             </svg>
         </div>
     </div>
+    <div class='template-request'>
+        <div class="icon">
+            <img src="./phonoscope-icon.svg" alt="phonoscope icon">
+        </div>
+        <p class="template-request__text">მოითხოვე სამედიცინო ანაზღაურება <a href="">შენთვის ან სხვისთვის</a> პოლისის ნომრის მითითებით</p>
+        <a href="" class="template-request__btn">ანაზღაურების მოთხოვნა</a>
+    </div>
+    <div class="template-slider__container" style="margin-top: 38px;margin-bottom: 50px;">
+        <div class="template-slider">
+            <div class='template-slider__title'>ᲩᲔᲛᲘ ᲨᲐᲑᲚᲝᲜᲔᲑᲘ</div>
+        </div>
+        <div class='template-slider__empty'>
+            <div class="icon">
+                <img src="./template-icon.svg" alt="blank icon">
+            </div>
+            <div class="text-block">
+                <h3 class="text-block__title">თქვენ არ გაქვთ შენახული შაბლონი</h3>
+                <p class="text-block__text">
+                    ტექსტი სადაც ვეუბნებით როგორ უნდა დაამატოს შაბლონი და რატომ სჭირდება შაბლონის დამატება მომხმარებელს.
+                </p>
+            </div>
+        </div>
+    </div>
+
+
     <script type="text/javascript">
         const swiper = new Swiper('.swiper', {
             // Optional parameters
