--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <path style="fill:#fff;fill-rule:evenodd;" d="M14.167,7.167a1.167,1.167,0,1,0-2.333,0v4.667H7.167a1.167,1.167,0,1,0,0,2.333h4.667v4.667a1.167,1.167,0,0,0,2.333,0V14.167h4.667a1.167,1.167,0,0,0,0-2.333H14.167Z" transform="translate(9.9 -8.485) rotate(45)"/>
         </symbol>
     </svg>
-    
+ 
     <div class="template-slider__container">
         <div class="template-slider__modal">
             <div class="template-slider__modal__inner">
@@ -351,7 +351,7 @@
         <p class="template-request__text">მოითხოვე სამედიცინო ანაზღაურება <a href="">შენთვის ან სხვისთვის</a> პოლისის ნომრის მითითებით</p>
         <a href="" class="template-request__btn">ანაზღაურების მოთხოვნა</a>
     </div>
-    <div class="template-slider__container" style="margin-top: 38px;margin-bottom: 50px;">
+    <div class="template-slider__container" id="noneed">
         <div class="template-slider">
             <div class='template-slider__title'>ᲩᲔᲛᲘ ᲨᲐᲑᲚᲝᲜᲔᲑᲘ</div>
         </div>
@@ -367,7 +367,6 @@
             </div>
         </div>
     </div>
-
 
     <script type="text/javascript">
         const swiper = new Swiper('.swiper', {
