--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <svg width="0" height="0" style="display: none;">
-        <symbol id="bin-icon" xmlns="http://www.w3.org/2000/svg" width="19" height="20" viewBox="0 0 19 20">
+        <symbol id="bin-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 20">
             <g transform="translate(-1348 -680)">
                 <g transform="translate(424 155)">
                     <g transform="translate(9.5 115.105)">
@@ -368,7 +368,7 @@
         </div>
     </div>
 
-    
+
     <script type="text/javascript">
         const swiper = new Swiper('.swiper', {
             // Optional parameters
